Bug 90404 - OOXML: chart legend layout difference
Summary: OOXML: chart legend layout difference
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
3.4.6 release
Hardware: Other All
: medium normal
Assignee: Andras Timar
URL:
Whiteboard: target:5.0.0 target:4.3.7 target:4.4.3
Keywords: preBibisect, regression
Depends on:
Blocks:
 
Reported: 2015-04-01 21:15 UTC by Andras Timar
Modified: 2015-12-17 11:00 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
bugdoc (PPTX) (60.35 KB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2015-04-01 21:15 UTC, Andras Timar
Details
reference rendering (MS Office 2010) (90.75 KB, application/pdf)
2015-04-01 21:16 UTC, Andras Timar
Details
bugdoc (PPTX) (60.25 KB, application/vnd.openxmlformats-officedocument.presentation)
2015-04-04 12:11 UTC, Andras Timar
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Andras Timar 2015-04-01 21:15:54 UTC
Created attachment 114539 [details]
bugdoc (PPTX)

The minimal line spacing between legend labels is bigger in LibreOffice than in MS Office. This causes that in LibreOffice there are only 5 elements in the legend, the 6th one is not visible
Comment 1 Andras Timar 2015-04-01 21:16:23 UTC
Created attachment 114540 [details]
reference rendering (MS Office 2010)
Comment 2 raal 2015-04-02 13:23:36 UTC
I can confirm with LO 4.4.1.2, win7
Comment 3 Matthew Francis 2015-04-04 11:17:27 UTC
I see 5 labels in the legend on Linux / LO 3.3.0

-> Version: Inherited from OOo
Comment 4 Matthew Francis 2015-04-04 11:21:51 UTC
LO 4.4.2.2 on Linux and OSX shows 6 labels. For Linux, this appears to have changed as of the range:

commit 288796dca516e779d45513775be7c7bc3ff291f7
Author: Bjoern Michaelsen <bjoern.michaelsen@canonical.com>
Date:   Wed Nov 27 07:22:33 2013 +0000

    source-hash-5d0051efb99c6cbd0dc4dd655a71e7435159f6bc
    
    commit 5d0051efb99c6cbd0dc4dd655a71e7435159f6bc
    Author:     Tor Lillqvist <tml@collabora.com>
    AuthorDate: Thu Oct 24 11:33:52 2013 +0300
    Commit:     Tor Lillqvist <tml@collabora.com>
    CommitDate: Thu Oct 24 12:07:26 2013 +0300


I'm betting that's to do with the below commit and those related to it:

commit bde5e683286096b9255254b28a862e519d57f547
Author: Caolán McNamara <caolanm@redhat.com>
Date:   Wed Oct 23 14:57:32 2013 +0100

    bundle Carlito and Caladea
    
    Change-Id: Ibb68ad33764bcbab88e68c35805a00287177a5c8


The point of these fonts is to improve font metric compatibility, so they probably resulted in spacing changes. If there's an issue still visible on Windows, it may be Windows specific.
Comment 5 Matthew Francis 2015-04-04 11:38:59 UTC
I had my terminals in a twist in comment 3 - in fact there are 6 labels visible in 3.3.0, but they aren't formatted correctly (two rows of three, rather than one column). By 3.4.6.2 it is formatted correctly but there are only 5 visible.

So we can call the fact that one went missing a regression.

-> Version: 3.4.0 release
-> Keywords: regression
-> Whiteboard: preBibisect
Comment 6 Andras Timar 2015-04-04 12:11:52 UTC
Created attachment 114612 [details]
bugdoc (PPTX)

I uploaded a new bugdoc. It uses Arial, not Calibri. So the bug is not related to C fonts. 

The root cause is, I think, that LibreOffice calculates font metrics a bit differently, or it is using slightly different layout algorithm. 

I have a patch that help in this corner case, but it looks a buit 'ad hoc' to me. I'll submit it for review.
Comment 7 Commit Notification 2015-04-04 17:13:22 UTC
Andras Timar committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=6220362e844ad0e50a38c1627ddd05a082882009

tdf#90404 OOXML chart legend import improvement

It will be available in 5.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2015-04-09 23:29:40 UTC
Andras Timar committed a patch related to this issue.
It has been pushed to "libreoffice-4-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=c7eef865555b2ed252b1dffa9b3ed69780c63495&h=libreoffice-4-3

tdf#90404 OOXML chart legend import improvement

It will be available in 4.3.7.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2015-04-14 03:07:26 UTC
Andras Timar committed a patch related to this issue.
It has been pushed to "libreoffice-4-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=a13bd70d509b2e3f78910d4a968bfdbdd2a0fbf8&h=libreoffice-4-4

tdf#90404 OOXML chart legend import improvement

It will be available in 4.4.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 10 Robinson Tryon (qubit) 2015-12-17 11:00:53 UTC
Migrating Whiteboard tags to Keywords: (preBibisect)
[NinjaEdit]