tdf#90404 OOXML chart legend import improvement

In the bugdoc, the chart legend had 6 entries in PowerPoint, but
only 5 in Impress. I played a lot with padding and offset parameters
in layout algorithm without success. Finally I introduced this 1mm
tolerance, so the fixed legend frame can expand up to 1mm, if necessary.

Change-Id: Id1ad1df67aab41d942133cea8d16fccf0f215167
Reviewed-on: https://gerrit.libreoffice.org/15149
Reviewed-by: Andras Timar <andras.timar@collabora.com>
Tested-by: Andras Timar <andras.timar@collabora.com>
(cherry picked from commit 6220362e844ad0e50a38c1627ddd05a082882009)